grammer fixes for bhol

--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,4 @@ Whiteboard design session/images/Whiteboarddesignsessiontrainerguide-HybridIdent
 Whiteboard design session/images/Whiteboarddesignsessiontrainerguide-HybridIdentityimages/media/.DS_Store
 Hands-on lab/images/Hands-onlabstep-bystep-HybridIdentityImages/.DS_Store
 Hands-on lab/images/Hands-onlabstep-bystep-HybridIdentityImages/media/.DS_Store
+.DS_Store
